--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@ _hmt.push(['_setAccount', '7a9a59bc96ed24f18da5f20aa2a183df']);
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?7a9a59bc96ed24f18da5f20aa2a183df";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
-</script><script>
+</script>
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1255977648'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1255977648%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+<script>
   window.excludeGAPaths=[/^(?:\/preview\/(?:(?!(?:\/|^)\.).)*?)$/,/^(?:\/do\-not\-track\/me\/too\/)$/];
   function gaOptout(){document.cookie=disableStr+'=true; expires=Thu, 31 Dec 2099 23:59:59 UTC;path=/',window[disableStr]=!0}var gaProperty='YOUR_GOOGLE_ANALYTICS_TRACKING_ID',disableStr='ga-disable-'+gaProperty;document.cookie.indexOf(disableStr+'=true')>-1&&(window[disableStr]=!0);
   if(!(parseInt(navigator.doNotTrack) === 1 || parseInt(window.doNotTrack) === 1 || parseInt(navigator.msDoNotTrack) === 1 || navigator.doNotTrack === "yes")) {
@@ -33,5 +35,5 @@ _hmt.push(['_setAccount', '7a9a59bc96ed24f18da5f20aa2a183df']);
       ga('require', 'YOUR_GOOGLE_OPTIMIZE_TRACKING_ID');
       ga('set', 'expId', 'YOUR_GOOGLE_EXPERIMENT_ID');
       ga('set', 'expVar', 'YOUR_GOOGLE_OPTIMIZE_VARIATION_ID');
-      
+
       }</script><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/";window.webpackCompilationHash="44aa63fcb58cfb12e425";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-dc78b3baf10c0ef6a026.js"],"component---src-pages-404-js":["/component---src-pages-404-js-ab2c94febcf9551f1ab3.js"],"component---src-pages-index-js":["/component---src-pages-index-js-48c367e2e6cd8a4aa08a.js"],"component---src-pages-page-2-js":["/component---src-pages-page-2-js-c080c553d7a5769f54a4.js"]};/*]]>*/</script><script src="/webpack-runtime-b6009cc2333f5b6a91f3.js" async=""></script><script src="/commons-7b17a1970ae25faa5fed.js" async=""></script><script src="/component---src-pages-index-js-48c367e2e6cd8a4aa08a.js" async=""></script><script src="/app-dc78b3baf10c0ef6a026.js" async=""></script></body></html>
